fix: use object-fit contain to fix canvas stretching

--- a/styles.css
+++ b/styles.css
@@ -45,11 +45,11 @@ html, body {
 
 #jeeFaceFilterCanvas {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 100%;
-    max-height: 100%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
     pointer-events: none;
 }
 
